# Compiladores

./: CMakeLists.txt  Dockerfile  README.md
flex_lab/: CMakeLists.txt  Dockerfile  lex.yy.c  resultados_completos.txt  scanner  scanner.c  scanner.h  scanner.l
flex_lab/ejemplos/: numeros.c
flex_lab/ejemplos (Copiar)/: errores.c  operadores.c
lalr_1/lalr_1/: CMakeLists.txt  README.md
lalr_1/lalr_1/examples/: grammar_decl.txt  input_decl.c  parse_table.json
lalr_1/lalr_1/pruebas/daniel_alcantara_andrade/: grammar.txt  input1.c  input2.c  input3.c  input4.c  input5.c  input6.c  parse_table1.csv  parse_table6.csv
lalr_1/lalr_1/pruebas/diego_eduardo_peña_villegas/: grammar.txt  input2.c  input3.c  input4.c  input5.c  parse_table3.csv  parse_table3.json  parse_table6.csv
lalr_1/lalr_1/pruebas/diego_tonatiuh_fuentes_ortega/: grammar.txt  input1.c  input2.c  input3.c  input4.c  input5.c  input6.c  parse_table5.csv
lalr_1/lalr_1/pruebas/gerardo_de_jesus_angel_maldonado/: grammar.txt  input2.c  input3.c  input4.c  input5.c  input6.c  parse_table5.csv
lalr_1/lalr_1/pruebas/jonathar_arturo_preciado_reyes/: grammar.txt  input4.c  input6.c  parse_table1.csv
lalr_1/lalr_1/pruebas/oscar_ivan_sanchez_gonzalez/: grammar.txt  input3.c  input4.c  input5.c  parse_table1.json  parse_table5.csv
lalr_1/lalr_1/pruebas/pablo_isaias_cruz_campos/: grammar.txt  input1.c  input2.c  input3.c  input4.c  input5.c  input6.c  parse_table4.csv
lalr_1/lalr_1/pruebas/paolo_flores/: grammar.txt  input2.c  input5.c  parse_table1.csv
lalr_1/lalr_1/pruebas/sofia_guadalupe_alatorre_mendez/: grammar.txt  input2.c  input3.c  input4.c  input5.c  parse_table3.csv
lalr_1/lalr_1/pruebas/tomas_barrera_hernandez/: grammar.txt  input3.c  input4.c  input5.c  input6.c  (+1 more)
lalr_1/lalr_1/src/: analyzer.c  analyzer.h  automaton.c  automaton.h  grammar.c  grammar.h  main.c  parser.c  parser.h  scanner.h  scanner.l
(+60 files in other folders)
